<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">
	<TextView  android:id="@+id/text_title"
			   android:layout_width="fill_parent" 
    		   android:layout_height="wrap_content"
    		   android:gravity="center"
    		   android:textColor="#FF0000"
    		   android:background="#FFFFFF"
    		   android:textSize="10pt"  
    		   android:text="@string/caption_title"/>
     <ScrollView android:id="@+id/scroll_button"
     			 android:layout_below="@id/text_title"
     			 android:layout_width="fill_parent" 
     			 android:layout_height="wrap_content"
     			>
    <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center">
         
    	<Button	android:id="@+id/button_barcode"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_barcode" />
       	 <Button android:id="@+id/button_cam"
        		android:layout_below="@id/button_barcode"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_cam" />
        <Button	android:id="@+id/button_bdb_add"
        		android:layout_below="@id/button_cam"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_bdb_add" />
        <Button android:id="@+id/button_bdb_sum"
        		android:layout_below="@id/button_bdb_add"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_bdb_sum" />
        <Button	android:id="@+id/button_gps"
        		android:layout_below="@id/button_bdb_sum"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_gps" />
        <Button	android:id="@+id/button_gpss"
        		android:layout_below="@id/button_gps"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_gpss" />
        <Button	android:id="@+id/button_wae"
        		android:layout_below="@id/button_gpss"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_wae" />
        <Button	android:id="@+id/button_waea"
        		android:layout_below="@id/button_wae"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_waea" />
        <Button	android:id="@+id/button_waep"
        		android:layout_below="@id/button_waea"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_waep" />
        <Button	android:id="@+id/button_wsca"
        		android:layout_below="@id/button_waep"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_wsca" />
        <Button	android:id="@+id/button_wscp1"
        		android:layout_below="@id/button_wsca"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_wscp1" />
        <Button	android:id="@+id/button_wscp2"
        		android:layout_below="@id/button_wscp1"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_wscp2" />
        <Button	android:id="@+id/button_unbind"
        		android:layout_below="@id/button_wscp2"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_unbind" />
       	<Button	android:id="@+id/button_finish"
        		android:layout_below="@id/button_unbind"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:text="@string/caption_finish" />
        
	</RelativeLayout>
	</ScrollView>
</LinearLayout>
